Required software step is working

--- a/app/app.html
+++ b/app/app.html
@@ -111,10 +111,10 @@
         <div class="container" id="mainContainer">
             <div class="row toolbar">
                 <div class="col-xs-12 text-right nopadding">
-                    <a href="#" id="minimize">
+                    <a href="javascript:void(0);" id="minimize">
                         <img src="content/imgs/delete.png" style="width:12px; padding-top: 3px; margin-right: 6px;" />
                     </a>
-                    <a href="#" id="close">
+                    <a href="javascript:void(0);" id="close">
                         <img src="content/imgs/delete-2.png" style="width:12px; margin-right: 10px;" />
                     </a>
                 </div>
