Tweaks for improved new project

--- a/app/login.html
+++ b/app/login.html
@@ -91,7 +91,7 @@
     </head>
     <body>
         <div class="container">
-            <div class="row toolbar">
+            <div class="row toolbar" style="height: auto">
                 <div class="col-xs-12 text-right nopadding">
                     <a href="javascript:void(0)" id="close" style="display: block;float:right;width:40px; padding-right: 15px;padding-top: 7px; padding-bottom: 4px; font-size: 10px;">
                         <span class="icon-delete-2">
